# kwiver

./: CMakeLists.txt
CMake/: kwiver-depends-Caffe.cmake  kwiver-depends.cmake  kwiver-setup-python.cmake  kwiver-test-setup.cmake
CMake/utils/: kwiver-utils-configuration.cmake  kwiver-utils-python-tests.cmake  kwiver-utils-python.cmake  kwiver-utils-tests.cmake
arrows/: CMakeLists.txt
arrows/caffe/: CMakeLists.txt  caffe_segnet_segmentor.cxx  caffe_segnet_segmentor.h  register_algorithms.cxx
arrows/core/: handle_descriptor_request_core.cxx  read_track_descriptor_set_csv.h  register_algorithms.cxx
arrows/darknet/: darknet_detector.cxx
arrows/ocv/: extract_descriptors_HOG.cxx  extract_descriptors_HOG.h  register_algorithms.cxx
arrows/ocv/tests/: test_crop_chips.cxx
arrows/segnet/: CMakeLists.txt  register_algorithms.cxx  segnet_segmentation.cxx  segnet_segmentation.h
sprokit/: CMakeLists.txt
sprokit/cmake/conf/: sprokit-config-build.cmake.in  sprokit-macro-configure.cmake  sprokit-macro-python-tests.cmake  sprokit-macro-python.cmake  sprokit-macro-tests.cmake
sprokit/cmake/support/: test.cmake
sprokit/conf/: sprokit-macro-configure.cmake  sprokit-macro-python-tests.cmake  sprokit-macro-python.cmake
sprokit/processes/: kwiver_type_traits.h
sprokit/processes/bindings/c/: vital_type_converters.cxx  vital_type_converters.h
sprokit/processes/core/: CMakeLists.txt  extract_image_descriptor_process.cxx  extract_image_descriptor_process.h  image_segmentor_process.cxx  image_segmentor_process.h  register_processes.cxx
sprokit/processes/vxl/: kw_archive_writer_process.cxx
sprokit/src/bindings/python/: CMakeLists.txt
sprokit/src/bindings/python/modules/: loaders.py  modules.py
sprokit/src/bindings/python/processes/: CMakeLists.txt
sprokit/src/bindings/python/schedulers/: CMakeLists.txt
sprokit/src/bindings/python/sprokit/pipeline/: datum.cxx  process_factory.cxx
sprokit/src/bindings/python/test/: CMakeLists.txt  test.py
sprokit/src/bindings/python/test/python/modules/: CMakeLists.txt  __init__.py
sprokit/tests/: CMakeLists.txt
sprokit/tests/bindings/python/: CMakeLists.txt
vital/: CMakeLists.txt
vital/algo/: CMakeLists.txt  extract_image_descriptor.cxx  extract_image_descriptor.h  image_segmentor.cxx  image_segmentor.h  split_image.h
vital/bindings/: c_introspect.py  c_patterns.py  fmt_templates.py  grave.py
vital/bindings/c/: CMakeLists.txt
vital/bindings/c/helpers/: c_utils.h  feature_set.h
vital/bindings/python/: CMakeLists.txt  requirements.txt  run_tests.sh
vital/kwiversys/: SystemTools.cxx  SystemTools.hxx.in
vital/plugin_loader/: plugin_manager.cxx
vital/tests/: CMakeLists.txt  test_image_container_set.cxx
vital/types/: detected_object_type.cxx  feature.h  feature_set.h  image_container_set.h  oriented_bounding_box.cxx  oriented_bounding_box.h  segmentation_image.cxx  segmentation_image.h
(+62 files in other folders)
